# tensoflow-cpp-example

./: CMakeLists.txt  Makefile  README.md  example_tensorflow_AICT.c  example_tensorflow_AICT.cpp  example_tensorflow_HelloWorld.c  example_tensorflow_NNmodel.cpp  example_tensorflow_tanh.cpp  main.cpp
model/: saved_model.pb
model/variables/: variables.data-00000-of-00001  variables.index
models/model_simpleNN/: saved_model.pb
models/model_simpleNN/variables/: variables.data-00000-of-00001  variables.index
models/model_tanh/: saved_model.pb
models/model_tanh/variables/: variables.data-00000-of-00001  variables.index
